@@ -2028,6 +2028,10 @@ languages/perl6/t/compiler/numbers.t              [perl6]
 languages/perl6/t/compiler/qsort.t                [perl6]
 languages/perl6/t/compiler/string.t               [perl6]
 languages/perl6/t/harness                         [perl6]
+languages/perl6/t/op/common/bitwise.t             [perl6]
+languages/perl6/t/op/common/concat.t              [perl6]
+languages/perl6/t/op/common/minus.t               [perl6]
+languages/perl6/t/var/scalar/string/qq.t          [perl6]
 languages/perl6/t/parser/apoc1.t                  [perl6]
 languages/perl6/t/parser/basic.t                  [perl6]
 languages/perl6/t/parser/error.t                  [perl6]
